--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "typeface-roboto": "0.0.75",
     "typescript": "^3.8.3"
   },
   "scripts": {
